kubernetes/oidc/vouch-nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webgl-nginx
  namespace: webgl-nginx
spec:
  selector:
    matchLabels:
      app: webgl-nginx
  template:
    metadata:
      labels:
        app: webgl-nginx
    spec:
      containers:
      - name: webgl-nginx
        image: deserializeme/unity-webgl-nginx:v0.0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webgl-nginx-service
  namespace: webgl-nginx
spec:
  selector:
    app: webgl-nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webgl-nginx-ingress
  namespace: webgl-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-signin: "https://oidc.buildstar.online/login?url=$scheme://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err"
    nginx.ingress.kubernetes.io/auth-url: https://oidc.buildstar.online/validate
    nginx.ingress.kubernetes.io/auth-response-headers: X-Vouch-User
    nginx.ingress.kubernetes.io/auth-snippet: |
      auth_request_set $auth_resp_jwt $upstream_http_x_vouch_jwt;
      auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
      auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
spec:
  tls:
    - hosts:
      - webgl-nginx.buildstar.online
      secretName: "webgl-nginx-tls"
  rules:
  - host: webgl-nginx.buildstar.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webgl-nginx-service
            port:
              number: 8080
